fixed layout issues and started movement controls

--- a/static/gui/static/css/gui_update.css
+++ b/static/gui/static/css/gui_update.css
@@ -46,10 +46,10 @@
   background-image: linear-gradient(to right, rgb(235, 0, 0), rgb(245, 145, 0));
 }
 
-.control {
+/* .control {
   padding-left: 15px;
   padding-top: 15px;
-}
+} */
 
 .divider {
   width: 100px;
@@ -241,6 +241,10 @@ table {
   letter-spacing: 0.11em;
 }
 
+#setup_control_tab > .row {
+  margin: 0;
+}
+
 #title {
   font-size: 50px;
   color: white;
@@ -357,13 +361,12 @@ table {
 
 .control-option {
   background-color: #2c3137;
-  border-radius: 25px;
+  border-radius: 15px;
   padding: 20px 25px;
   margin-bottom: 10px;
 }
 
-#port-config .small-title,
-#bot-setup .small-title {
+.small-title {
   font-family: "Audiowide", cursive;
   color: #ff8484;
   font-weight: 60;
@@ -396,6 +399,28 @@ table {
   font-size: 18px;
   padding-right: 0px;
   letter-spacing: 0.02em;
+}
+
+/* MOVEMENT CONTROLS */
+
+/* triangle stuff */
+.tr {
+  width: 30%;
+  padding-bottom: 21.27%; /* = width / 1.41 */
+  position: relative;
+  overflow: hidden;
+}
+
+.tr:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0079C6;
+  transform-origin: 0 100%;
+  transform: rotate(45deg);
 }
 
 .container-coding {
